manifests/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 80
      targetPort: 8989
