manifests/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: sonarr
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sonarr.blinde.net
      secretName: sonarr-tls
  rules:
    - host: sonarr.blinde.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
